--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.16"
+    "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.2.0",
+    "@astrojs/tailwind": "^5.1.3",
+    "astro": "^4.16.16",
+    "autoprefixer": "^10.4.19",
+    "dayjs": "^1.11.12",
+    "lunr": "^2.3.9",
+    "sitemap": "^7.1.1",
+    "tailwindcss": "^3.4.16"
   }
 }
