--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^8.3.4",
     "@astrojs/rss": "^4.0.5",
     "@astrojs/sitemap": "^3.2.0",
     "@astrojs/tailwind": "^5.1.3",
