--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "lunr": "^2.3.9",
     "sitemap": "^7.1.1",
     "tailwindcss": "^3.4.16"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
